examples/tactics/neg/LemmaArgs.fst.hints
[
  "\b’ÒC®\u0001V„Ò¶4cðÜ1i",
  [
    [
      "LemmaArgs.lemma_example1",
      1,
      2,
      1,
      [
        "@MaxIFuel_assumption", "@query",
        "refinement_interpretation_LemmaArgs_Tm_refine_f0496eb03f3fb51b5e4ca0d53ea58c01"
      ],
      0,
      "389a06f105fb03e6289d850d6aa4320a"
    ],
    [
      "LemmaArgs.lemma_example1",
      2,
      2,
      1,
      [ "@query", "assumption_Prims.HasEq_int" ],
      0,
      "a825deb8fb7d7204a8dde3beec4b0f52"
    ],
    [
      "LemmaArgs.lemma_example1",
      3,
      2,
      1,
      [ "@query", "assumption_Prims.HasEq_int" ],
      0,
      "6ba9cc72541681eb5e635858b28034ee"
    ],
    [
      "LemmaArgs.example1",
      1,
      2,
      1,
      [ "@query" ],
      0,
      "88f0ca64721935083b031adfd7676316"
    ],
    [
      "LemmaArgs.example1",
      3,
      2,
      1,
      [ "@query", "assumption_Prims.HasEq_int" ],
      0,
      "5b5796784782fa1f1a788738ec91ec0c"
    ],
    [
      "LemmaArgs.example1",
      4,
      2,
      1,
      [ "@query", "assumption_Prims.HasEq_int" ],
      0,
      "8639ff6eb6c155124eb5e08266a2fade"
    ]
  ]
]